Add support for inventories with new classic stock support
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1417 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.notifications.yml
+++ b/config/locales/fr-FR.notifications.yml
@@ -43,7 +43,7 @@ fr-FR:
     no_closable_journal: 'Vous n''avez aucun journal à clôturer.' 
     no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque' 
     no_entries_pointable_for_bank_account: 'Ce compte bancaire ne contient aucune écriture à pointer.' 
-    no_existing_mandates: 'Il n''y a pas de responsbilités enregistrées pour l''instant' 
+    no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant' 
     no_financialyear: 'Aucun exercice enregistré' 
     no_lines_found: 'Aucun pruduit n''a été ajouté à la commande ' 
     no_location: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks' 
@@ -53,7 +53,7 @@ fr-FR:
     no_unvalidated_operations: 'Aucun travail à réaliser' 
     password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès' 
     prices_import_succeeded: 'Vos données ont été correctement importées' 
-    print_failure: 'Impossible d''imprimer. {{class}}: {{error}}' 
+    print_failure: 'Impossible d''imprimer. {{error}} ({{class}}).' 
     record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement' 
     record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement' 
     restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}' 
