Cleans inventories, documents and listings
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1418 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.notifications.yml
+++ b/config/locales/fr-FR.notifications.yml
@@ -6,6 +6,8 @@ fr-FR:
     cannot_delete_journal: 'Ce journal contient des écritures et ne peut donc être effacé.' 
     cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même' 
     cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.' 
+    changes_have_been_reflected: 'Les changements ont été correctement répercutés sur l''état des stocks actuel' 
+    changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel' 
     closed_financialyears: 'L''exercice a été correctement clôturé' 
     expired_session: 'Session expirée. Veuillez vous reconnecter.' 
     import_succeeded: 'Vos données ont été correctement importées ' 
@@ -48,12 +50,13 @@ fr-FR:
     no_lines_found: 'Aucun pruduit n''a été ajouté à la commande ' 
     no_location: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks' 
     no_payment_to_embank: 'Aucun chèque à encaisser' 
+    no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.' 
     no_template_journal: 'Pas de modèle journal' 
     no_template_journal_by_id: 'Pas de modèle journal' 
     no_unvalidated_operations: 'Aucun travail à réaliser' 
     password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès' 
     prices_import_succeeded: 'Vos données ont été correctement importées' 
-    print_failure: 'Impossible d''imprimer. {{error}} ({{class}}).' 
+    print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).' 
     record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement' 
     record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement' 
     restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}' 
