Fixes journal close process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1432 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -226,9 +226,7 @@ fr-FR:
         journals:
           bank: Journal de banque
           sales: Journal des ventes
-          purchases: Journals des achats
-          purchase_orders: 'Journal d''achats'
-          sale_orders: Journal de ventes
+          purchases: Journal des achats
         location: Réserve
         paid_tax: 'TVA déductible'
         price_list_name: Tarif normal
