Add evolution #98 which permit to reopen a closed journal
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1434 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/notifications.yml
+++ b/config/locales/fra/notifications.yml
@@ -14,6 +14,8 @@ fra:
     impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande' 
     impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat' 
     invoice_already_created: 'La facture de cette livraison a déjà été créée' # NOT USED !!!
+    journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.' 
+    journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.' 
     need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.' 
     need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.' 
     need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.' 
@@ -42,7 +44,7 @@ fra:
     no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.' 
     no_balance_template: 'Pas de modèle de document pour la balance' 
     no_closable_financialyear: 'Vous n''avez aucun exercice à clôturer.' 
-    no_closable_journal: 'Vous n''avez aucun journal à clôturer.' 
+    no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.' 
     no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque' 
     no_entries_pointable_for_bank_account: 'Ce compte bancaire ne contient aucune écriture à pointer.' 
     no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant' 
@@ -50,6 +52,7 @@ fra:
     no_lines_found: 'Aucun pruduit n''a été ajouté à la commande ' 
     no_location: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks' 
     no_payment_to_embank: 'Aucun chèque à encaisser' 
+    no_reopenable_journal: 'Vous ne pouvez pas déclôturer ce journal.' 
     no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.' 
     no_template_journal: 'Pas de modèle journal' 
     no_template_journal_by_id: 'Pas de modèle journal' 
@@ -71,4 +74,3 @@ fra:
     validates_old_inventories: 'Il est conseillé de supprimer ou de valider les inventaires non validés avant d''en faire un nouveau' 
     you_must_have_an_email_column: 'Vous devez avoir une colonne Email dans votre extraction' 
     you_must_select_a_file_to_import: 'Vous devez sélectionner un fichier à importer' 
-    journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
