--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -192,16 +192,20 @@ fra:
         taxes: 'Taxes'
         title: 'Comptabilité générale'
         works: 'Travaux comptables'
+      journal:
+        title: '{{name}} ({{code}})'
       journal_close:
         close: 'Clôturer le journal'
-        select_closure_date: Choisissez la date de clôture
+        select_closure_date: 'Choisissez la date de clôture'
         title: 'Clôture du {{name}}'
       journal_create:
         title: 'Créer un nouveau journal'
+      journal_reopen:
+        reopen: 'Déclôturer le journal'
+        select_closure_date: 'Choisissez la date de clôture'
+        title: 'Déclôture du {{name}}'
       journal_update:
         title: 'Modifier le journal'
-      journal:
-        title: '{{name}} ({{code}})'
       journals:
         journal_create: 'Enregistrer un nouveau journal'
         title: 'Journaux'
@@ -219,12 +223,12 @@ fra:
         dates: 'Saisissez les dates de début et de fin de la période'
         from: 'Période du'
         to: 'Au'
-      print_balance_sheet:
-        period: 'Période'
-        title: 'Impression du bilan'
       _print_balance_sheet:
         balance_sheet: 'Sélectionnez l''exercice'
         select_financialyear: 'Exercice'
+      print_balance_sheet:
+        period: 'Période'
+        title: 'Impression du bilan'
       print_by_financial_year:
         financial_id: 'Exercice comptable'
         financial_year_select: 'Sélectionnez l''''exercice comptable'
