Fixes #96 to give discount on sale and removes sale_order_line merge function. Fixes #102 by adding basic_validations and updating models
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1438 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -2029,6 +2029,7 @@ fra:
         created_at: 'Créé le'
         creator: 'Créateur'
         creator_id: 'Créateur'
+        discount: 'Réduction (en %)'
         delivery_lines: 'Lignes de livraison'
         entity: 'Relation'
         entity_id: 'Relation'
